--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
 streamlit==1.51.0
-pandas==2.3.3
-requests==2.32.5
-python-dotenv==1.2.1
-openai
-tenacity
-termcolor
-
+python-dotenv==1.0.1
+openai==1.52.2
+Pillow==11.0.0
