feat: Add Streamlit secrets support for secure deployment
- Update app to use Streamlit secrets with fallback to .env files
- Add .streamlit/secrets.toml.example for reference
- Update .gitignore to protect secrets.toml
- Add DEPLOYMENT.md with step-by-step deployment guide
- Update README.md with Streamlit Cloud deployment instructions
- Improve error messages for missing API keys

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,9 @@ env/
 .DS_Store
 
 # Streamlit
-.streamlit/
+.streamlit/secrets.toml
+# Keep .streamlit/secrets.toml.example for reference
+!.streamlit/secrets.toml.example
 
 # Logs
 *.log
